--- a/podcaster-nlw-next/src/styles/global.scss
+++ b/podcaster-nlw-next/src/styles/global.scss
@@ -22,5 +22,22 @@
 }
 
 body {
-  background: rgb(168, 84, 84);
+  background: var(--gray-50)
+}
+
+body, input, textarea, button {
+  font: 500 1rem sans-serif;
+  color: var(--gray-500);
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+button {
+  cursor: pointer;
 }
