--- a/podcaster-nlw-next/src/components/Header/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Header/styles.module.scss
@@ -8,4 +8,15 @@
   padding: 2rem 4rem;
 
   border-bottom: 1px solid var(--gray-100);
+
+  p {
+    margin-leth: 2rem;
+    padding: 0.25rem 0 0.25rem 2rem;
+    border-leth: 1px solid var(--gray-100);
+  }
+
+  span {
+    margin-leth: auto;
+    text-transform: capitalize;
+  }
 }
