--- a/podcaster-nlw-next/src/components/Header/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Header/styles.module.scss
@@ -10,13 +10,13 @@
   border-bottom: 1px solid var(--gray-100);
 
   p {
-    margin-leth: 2rem;
+    margin-left: 2rem;
     padding: 0.25rem 0 0.25rem 2rem;
-    border-leth: 1px solid var(--gray-100);
+    border-left: 1px solid var(--gray-100);
   }
 
   span {
-    margin-leth: auto;
+    margin-left: auto;
     text-transform: capitalize;
   }
 }
