posicionando o player content

--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -1,3 +1,13 @@
 .playerComponent {
+  padding: 3rem 4rem;
+  width: 26.5rem;
+  height: 100vh;
 
+  background: var(--purple-500);
+  color: var(--white-500);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
