--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -10,4 +10,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+
+  header {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
 }
