opacidade quando vazio, e ocupar toda largura

--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -21,6 +21,14 @@
     font-family: Lexend, sans-serif;
     font-weight: 600;
   }
+
+  footer {
+    align-self: stretch;
+
+    &.empty {
+      opacity: 0.5;
+    }
+  }
 }
 
 .emptyPlayer {
