--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -49,4 +49,17 @@
   align-items: center;
   gap: 1rem;
   font-size: 0.875rem;
+
+  span {
+    display: inline-block;
+    width: 4rem;
+    text-align: center;
+  }
+
+  .emptySlider {
+    width: 100%;
+    height: 4px;
+    background: var(--purple-300);
+    border-radius: 2px;
+  }
 }
