--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -58,7 +58,7 @@
 
   .slider {
     flex: 1;
-    
+
     .emptySlider {
       width: 100%;
       height: 4px;
@@ -66,5 +66,25 @@
       border-radius: 2px;
     }
   } 
+}
 
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2.5rem;
+  gap:1.5rem;
+
+  button {
+    background: transparent;
+    border: 0;
+    font-size: 0;
+
+    &.playButton {
+      width: 4rem;
+      height: 4rem;
+      border-radius: 1rem;
+      background: var(--purple-400);
+    }
+  }
 }
