--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -4,7 +4,7 @@
   height: 100vh;
 
   background: var(--purple-500);
-  color: var(--white-500);
+  color: var(--white);
 
   display: flex;
   flex-direction: column;
@@ -54,7 +54,6 @@
     display: inline-block;
     width: 4rem;
     text-align: center;
-    color: var(--gray-100);
   }
 
   .slider {
