--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -31,7 +31,33 @@
       width: 6rem;
       height: 6rem;
       border-radius: 1rem;
-    
+    }
+
+    .episodesDetails {
+      flex: 1;
+      margin-left: 1rem;
+
+      a {
+        display: block;
+        color: var(--gray-800);
+        font-family: Lexend, sans-serif;
+        font-weight: 600;
+        text-decoration: none;
+        line-height: 1.4rem;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      p {
+        font-size: 0.875rem;
+        margin-top: 0.5;
+        max-width: 70%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
