--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -58,6 +58,12 @@
         overflow: hidden;
         text-overflow: ellipsis;
       }
+
+      span {
+        display: inline-block;
+        margin-top: 0.5rem;
+        font-size: 0.875rem;
+      }
     }
   }
 }
