--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -78,8 +78,29 @@
             position: absolute;
             left: 0;
             top: 50%;
+            transform: translate(-50%, -50%);
           }
         }
+      }
+    }
+    button {
+      position: absolute;
+      right: 2rem;
+      bottom: 2rem;
+
+      width: 2.5rem;
+      height: 2.5rem;
+      background: var(--white);
+      border-radius: 0.675rem;
+      font-size: 0;
+
+      img {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+
+      &:hover {
+        filter: brightness(0.95);
       }
     }
   }
