--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -116,6 +116,12 @@
       padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--gray-100);
     }
-    
+
+    th {
+      color: var(--gray-200);
+      text-transform: uppercase;
+      font: 500 0.75rem Lexend, sans-serif;
+      text-align: left;
+    }
   }
 }
