--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -135,7 +135,15 @@
 
       a {
         color: var(--gray-800);
-        
+        font-family: Lexend, sans-serif;
+        font-weight: 600;
+        text-decoration: none;
+        line-height: 1.4rem;
+        font-size:1rem;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
