--- a/podcaster-nlw-next/src/pages/home.module.scss
+++ b/podcaster-nlw-next/src/pages/home.module.scss
@@ -90,6 +90,7 @@
 
       width: 2.5rem;
       height: 2.5rem;
+      border: 1px solid var(--gray-100);
       background: var(--white);
       border-radius: 0.675rem;
       font-size: 0;
@@ -149,6 +150,7 @@
         width: 2rem;
         height: 2rem;
         background: var(--white);
+        border: 1px solid var(--gray-100);
         border-radius: 0.5rem;
         font-size: 0;
   
