--- a/podcaster-nlw-next/src/pages/episodes/episode.module.scss
+++ b/podcaster-nlw-next/src/pages/episodes/episode.module.scss
@@ -21,6 +21,20 @@
 
       transition: filter 0.2s;
 
+      &:first-child {
+        left: 0;
+        top: 50%;
+        background: var(--purple-500);
+        transform: translate(-50%, -50%);
+      }
+
+      &:last-child {
+        right: 0;
+        top: 50%;
+        transform: translate(50%, -50%);
+        background: var(--green-500);
+      }
+
       &:hover {
         filter: brightness(0.9)
       }
