--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -102,6 +102,10 @@
     border: 0;
     font-size: 0;
 
+    &:disabled {
+      cursor: default;
+    }
+
     &.playButton {
       width: 4rem;
       height: 4rem;
