--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -101,9 +101,15 @@
     background: transparent;
     border: 0;
     font-size: 0;
+    
+    transition: filter 0.2s;
 
     &:disabled {
       cursor: default;
+    }
+
+    &:houver:not(:disabled) {
+      filter: brightness(0.7);
     }
 
     &.playButton {
@@ -111,11 +117,9 @@
       height: 4rem;
       border-radius: 1rem;
       background: var(--purple-400);
-      
-      transition: filter 0.2s;
 
-      &:hover {
-        filter: brightness(0.95)
+      &:houver {
+        filter: brightness(0.95);
       }
     }
   }
