finalizado a estilizacao indo para o audio

--- a/podcaster-nlw-next/src/components/Player/styles.module.scss
+++ b/podcaster-nlw-next/src/components/Player/styles.module.scss
@@ -108,7 +108,7 @@
       cursor: default;
     }
 
-    &:houver:not(:disabled) {
+    &:hover:not(:disabled) {
       filter: brightness(0.7);
     }
 
